--- a/criteria/CSS/style.css
+++ b/criteria/CSS/style.css
@@ -51,9 +51,6 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("criteria/images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
 .content {
@@ -85,6 +82,14 @@ p {
     max-height: 200px;
 }
 
+.topic h2 {
+    margin-bottom: 20px;
+}
+
+.topic p {
+    font-size: 16px;
+}
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -96,14 +101,14 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+.benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .benefit-cost {
@@ -130,72 +135,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .footer {
