--- a/criteria/CSS/style.css
+++ b/criteria/CSS/style.css
@@ -9,14 +9,14 @@ body {
 }
 
 /* These selectors (below) affect the styling of the header and children elements */
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -84,13 +84,13 @@ nav a {
 
 .topic h2 {
     margin-bottom: 20px;
+    font-size: 36px;
 }
 
 .topic p {
     font-size: 16px;
 }
 /* These selectors (above) affects the styling of the 'main' element */
-
 
 /* These selectors (below) affect the syling of the 'aside' elements and its contents */
 .benefits {
@@ -114,39 +114,22 @@ nav a {
     text-align: center;
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+/* These selectors (above) affect the styling of the 'aside' elements and its contents */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
+
+
